# voxlingua

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  (+1 more)
docs/: ARCHITECTURE.md  GITHUB_FLOW.md  PRD.md  PROTOCOL.md
engine/: .dockerignore  Dockerfile  __init__.py  config.yaml  pyproject.toml  pytest.ini  requirements.txt  server.py
engine/api/: chat.py  correction.py  scorer.py  stt.py  tts.py
engine/core/: audio_processor.py  correction_engine.py  phoneme_aligner.py  pipeline.py  session_manager.py  stt_engine.py  tts_engine.py
engine/llm/: cloud.py
engine/models/: model_manager.py  schemas.py
engine/models/weights/: .gitignore
engine/stt/: __init__.py  g2p.py  whisper_stt.py
engine/tests/: conftest.py  run_all.py  test_api.py  test_audio.py  test_audio_processor.py  test_correction.py  test_correction_engine.py  test_e2e_pipeline.py  test_e2e_speech.py  test_llm_cloud.py  test_schemas.py  test_server_api.py  test_session.py  test_session_manager.py
engine/tts/: __init__.py  cosyvoice_tts.py  edge_tts.py
engine/voice_profiles/: README.md
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/test/: widget_test.dart
scripts/: dev.bat  dev.sh  download_models.py  download_tts_model.py  setup.bat  setup.sh  setup_cosyvoice.bat  setup_dev.ps1  setup_dev.sh
voice_profiles/: README.md
(+19 files in other folders)
