[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy._Backend"

[project]
name = "voxlingua-engine"
version = "1.0.0"
description = "VoxLingua AI Engine — AI-powered spoken language practice system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "soundfile>=0.12.0",
    "numpy>=1.24",
    "librosa>=0.10.0",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
explicit_package_bases = true
